# ethercalc

./: .dockerignore  .gitignore  .npmignore  .project  AGENTS.md  API.md  CHANGELOG.mkdn  CLAUDE.md  CONTRIBUTING.md  Changes.txt  Dockerfile  LEGAL.txt  LICENSE.txt  LemmaScript-files.txt  Makefile  Procfile  README  README.md  README.mkdn  SANDSTORM.md  SocialCalc.js  SocialCalcModule.js  _start  app.coffee  app.js  app.ls  biome.json  browserconfig.xml  bun-passthrough.test.ts  bunfig.toml  clock.js  db.coffee  db.js  db.ls  deplist.txt  docker-compose.legacy.yml  docker-compose.proxy.yml  docker-compose.yml  dotcloud.coffee  dotcloud.js  (+60 more)
.dotcloud/: config
.openshift/: README.md
.sandstorm/: .gitattributes  .gitignore  DESCRIPTION.mkdn  box.toml  build.sh  global-setup.sh  lima.yaml  pgp-signature  run_grain.sh  sandstorm-files.list  sandstorm-pkgdef.capnp  sandstorm-test-app-id  setup.sh
apache/: apache-ldap.conf  apache-proxy.conf
docs/: MUTATION_REPORT.md  SELFHOST_HARDENING.md
helm/: .helmignore  Chart.yaml  README.md  (+1 more)
src_code/: .env  .env.example  PROGRESS.md  README.md  dev_setup.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  run_tests.py  start_server.py  test_db.py
src_code/data/backups/: backup_20250731_101300.json
src_code/src/: __init__.py
src_code/src/ethercalc/: __init__.py  config.py  database.py  logging_config.py  main.py  websocket_manager.py
src_code/src/ethercalc/api/: __init__.py  routes.py
src_code/src/ethercalc/core/: __init__.py  cell_parser.py  collaboration.py  engine.py  formula_engine.py  spreadsheet.py
src_code/src/ethercalc/utils/: __init__.py  exceptions.py  file_handlers.py  formatters.py
src_code/tests/: __init__.py  conftest.py
src_code/tests/integration/: test_api.py
src_code/tests/unit/: test_config.py  test_database.py  test_exceptions.py  test_formatters.py
(+170 files in other folders)
