[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ethercalc-python"
version = "1.0.0"
description = "Modern Python implementation of EtherCalc collaborative spreadsheet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "EtherCalc Team", email = "team@ethercalc.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "xlsxwriter>=3.1.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    "celery>=5.3.0",
    "pillow>=10.0.0",
    "markdown>=3.5.0",
    "pycryptodome>=3.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/ethercalc/ethercalc-python"
Repository = "https://github.com/ethercalc/ethercalc-python.git"
Issues = "https://github.com/ethercalc/ethercalc-python/issues"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true